--- a/.github/workflows/checkrun.yml
+++ b/.github/workflows/checkrun.yml
@@ -4,12 +4,15 @@
 name: Checkrun
 
 on:
-  pull_request_review_comment:
+  pull_request:
+    branches: [master]
+  issue_comment:
     types: [created]
+  workflow_dispatch:
 
 jobs:
   build:
-    if: ${{ github.event.comment.body == '/check' }}
+    if: ${{ (github.event_name == 'push' && !contains(toJSON(github.event.commits[0].message), '[skip ci]')) || (github.event.issue.pull_request && github.event.comment.body == '/build') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -20,7 +23,4 @@ jobs:
       - name: Echo
         run: |
           cat README.md
-      - name: Sleep for 30 seconds
-        uses: jakejarvis/wait-action@master
-        with:
-          time: "30s"
+          echo ${ github.event_name }
