--- a/.github/workflows/checkrun.yml
+++ b/.github/workflows/checkrun.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    if: ${{ (github.event_name == 'push' && !contains(toJSON(github.event.commits[0].message), '[skip ci]')) || (github.event.issue.pull_request && github.event.comment.body == '/build') }}
+    # if: ${{ (github.event_name == 'push' && !contains(toJSON(github.event.commits[0].message), '[skip ci]')) || (github.event.issue.pull_request && github.event.comment.body == '/build') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
