--- a/.github/workflows/checkrun.yml
+++ b/.github/workflows/checkrun.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Echo
         run: |
           cat README.md
-          echo ${ github.event_name }
+          echo ${{ github.event_name }}
